--- a/pupin-coils.html
+++ b/pupin-coils.html
@@ -16,7 +16,8 @@
 
 
 <h1>Pupin coils</h1>
- <img src="pupin-1916.jpg" alt="Text">
+ <img src="pupin-1916.jpg" alt="Text" height="300" width="200" >
+ 
 
 
 
