--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     
     <h1>Mihajlo Idvorski Pupin</h1>
-        <img src="pupin.jpg" alt="Alt text">
+        <img src="pupin.jpg" alt="Alt text" height="200" width="200" >
     <p><b>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935), also known as Michael I. Pupin, was a Serbian American physicist and physical chemist. </b></p>
 
 <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication by placing loading coils (of wire) at predetermined intervals <br>along the transmitting wire (known as "pupinization"). </p>
